--- a/NitroIdentity/src/NitroIdentityServer/Pages/Account/Login/Index.cshtml
+++ b/NitroIdentity/src/NitroIdentityServer/Pages/Account/Login/Index.cshtml
@@ -1,4 +1,4 @@
-@page
+﻿@page
 @model NitroIdentityServer.Pages.Login.Index
 
 <div class="login-page">
@@ -44,15 +44,15 @@
                                 </div>
                             }
                             
-                            <button class="btn btn-primary" name="Input.Button" value="login">Login</button>
-                            <button class="btn btn-secondary" name="Input.Button" value="cancel">Cancel</button>
+                            <button class="btn btn-primary" name="Input.Button" value="login">ورود</button>
+                            <button class="btn btn-secondary" name="Input.Button" value="cancel">لغو</button>
                         </form>
                     </div>
                 </div>
             </div>
         }
 
-        @if (Model.View.VisibleExternalProviders.Any())
+       @*  @if (Model.View.VisibleExternalProviders.Any())
         {
             <div class="col-sm-6">
                 <div class="card">
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-        }
+        } *@
 
         @if (!Model.View.EnableLocalLogin && !Model.View.VisibleExternalProviders.Any())
         {
