--- a/NitroIdentity/src/NitroClient/Pages/Shared/_Layout.cshtml
+++ b/NitroIdentity/src/NitroClient/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Signout">Signout</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CallApi">CallApi</a>
+                        </li>
                     </ul>
                 </div>
             </div>
