--- a/NitroIdentity/src/NitroClient/Pages/Index.cshtml
+++ b/NitroIdentity/src/NitroClient/Pages/Index.cshtml
@@ -12,6 +12,7 @@
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
+<h2>Claims</h2>
 <dl>
     @foreach (var claim in User.Claims)
     {
