--- a/NitroIdentity/src/NitroClient/Pages/Index.cshtml
+++ b/NitroIdentity/src/NitroClient/Pages/Index.cshtml
@@ -3,29 +3,22 @@
 
 @using Microsoft.AspNetCore.Authentication
 
-@{
-    ViewData["Title"] = "Home page";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-
 <h2>Claims</h2>
+
 <dl>
     @foreach (var claim in User.Claims)
     {
         <dt>@claim.Type</dt>
-        <dt>@claim.Value</dt>
+        <dd>@claim.Value</dd>
     }
 </dl>
 
 <h2>Properties</h2>
+
 <dl>
     @foreach (var prop in (await HttpContext.AuthenticateAsync()).Properties!.Items)
     {
         <dt>@prop.Key</dt>
-        <dt>@prop.Value</dt>
+        <dd>@prop.Value</dd>
     }
 </dl>
